# phase_estimation

./: CHANGES  Makefile.in  README.md  annotated.html  aux__functions_8cpp.html  aux__functions_8cpp_source.html  aux__functions_8h.html  aux__functions_8h_source.html  candidate_8cpp.html  candidate_8cpp_source.html  candidate_8h.html  candidate_8h_source.html  classCandidate-members.html  classCandidate.html  classDE-members.html  classDE.html  classOptAlg-members.html  classOptAlg.html  classPSO-members.html  classPSO.html  classPhase-members.html  classPhase.html  classProblem-members.html  classProblem.html  classRngBase-members.html  classRngBase.html  classRngSimple-members.html  classRngSimple.html  classRngVectorized-members.html  classRngVectorized.html  class_candidate-members.html  class_candidate.html  class_d_e-members.html  class_d_e.html  class_opt_alg-members.html  class_opt_alg.html  class_p_s_o-members.html  class_p_s_o.html  class_phase-members.html  class_phase.html  (+58 more)
doc/: DoxygenLayout.xml  annotated.html  aux__functions_8h_source.html  candidate_8h_source.html  classCandidate.html  classDE-members.html  classOptAlg-members.html  classPSO-members.html  classPSO.html  classPhase.html  classProblem-members.html  classRngBase-members.html  classRngBase.html  classRngSimple.html  classRngVectorized-members.html  diagram.eps  dir_68267d1309a1af8e8297ef4c3efbcdba.html  download.md  expand.md  functions.html  functions_func.html  io_8h_source.html  md_expand.html  md_usage.html  modular_doc.tex  mpi__optalg_8h_source.html  pages.html  phase_estimation.doxy  problem_8h_source.html  rng_8h_source.html  usage.md
doc/html/: annotated.html  candidate_8h.html  candidate_8h_source.html  classCandidate-members.html  classCandidate.html  classDE-members.html  classDE.html  classOptAlg-members.html  classOptAlg.html  classPSO-members.html  classPSO.html  classPhase-members.html  classPhase.html  classProblem-members.html  classProblem.html  classRngBase-members.html  classRngBase.html  classRngSimple-members.html  classRngSimple.html  classRngVectorized-members.html  classRngVectorized.html  class_candidate-members.html  class_candidate.html  class_d_e-members.html  class_d_e.html  class_opt_alg-members.html  class_opt_alg.html  class_p_s_o-members.html  class_p_s_o.html  class_phase-members.html  class_phase.html  class_problem-members.html  class_problem.html  class_rng_base-members.html  class_rng_base.html  class_rng_simple-members.html  class_rng_simple.html  class_rng_vectorized-members.html  class_rng_vectorized.html  classes.html  (+40 more)
doc/html/search/: all_10.js  all_11.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  (+6 more)
doc/latex/: annotated.tex  candidate_8h.tex  classCandidate.tex  classDE.tex  classOptAlg.eps  classOptAlg.tex  classPSO.eps  classPSO.tex  classPhase.tex  classProblem.tex  classRngBase.tex  classRngSimple.tex  classRngVectorized.eps  classRngVectorized.tex  class_candidate.tex  class_d_e.eps  class_d_e.tex  class_opt_alg.tex  class_p_s_o.tex  class_phase.eps  class_phase.tex  class_problem.eps  class_problem.tex  class_rng_base.eps  class_rng_base.tex  class_rng_simple.eps  class_rng_simple.tex  class_rng_vectorized.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  hierarchy.tex  index.tex  io_8cpp.tex  io_8h.tex  main_8cpp.tex  mpi__de_8cpp.tex  mpi__optalg_8cpp.tex  mpi__optalg_8h.tex  mpi__pso_8cpp.tex  phase__loss__opt_8cpp.tex  (+7 more)
doc/search/: all_4.js  all_8.js  classes_0.js  functions_8.js  functions_a.js  pages_0.js  pages_1.js  pages_2.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
results/: run_test.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+21 more)
src/: Makefile  Makefile.in  aux_functions.cpp  aux_functions.h  candidate.cpp  candidate.h  io.cpp  io.h  main.cpp  mpi_de.cpp  mpi_de.h  mpi_optalg.cpp  mpi_optalg.h  mpi_pso.cpp  mpi_pso.h  phase_loss_opt.cpp  phase_loss_opt.h  phase_loss_rand.cpp  phase_loss_rand.h  problem.cpp  problem.h  rng.cpp  rng.h  rng_gpu.cu  rng_gpu.h  rng_simple.cpp  rng_simple.h  rng_vectorized.h  rng_vsl.cpp  rng_vsl.h  subfunc.h
test/: Makefile.in  run_test.sh  test.cpp
test_data/: setting
test_src/: main_candidate.cpp  main_de.cpp  main_main.cpp  main_optalg.cpp  main_phase.cpp  main_pso.cpp
tests/: Makefile.in  unittests.cpp
